infra/opencloud/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: opencloud-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-gateway
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - "opencloud.monederobox.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: opencloud-opencloud
          port: 9200
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
